_includes/assets/css/inline.css
/* ... */
/*================================*/
/* Home Page
/*================================*/
.container{
	margin: 0px auto;
	width: 100%;
	max-width: var(--maxwidth);
	padding: 0px 24px; 
}
.container a[href]{
	color: black;
	text-decoration: none;
}
.headerImage{
	background: pink;
	height: 80%;
	height: 80vh;
	background-image: 
    linear-gradient(
		rgba(0, 0, 0, 0.1),
		rgba(0, 0, 0, 0.2), 
      	rgba(33, 51, 35, 0.8)
    ), url('/_includes/assets/img/header.jpg');
	background-size: cover;
	background-position: center;
	display: flex;
	align-items: center;
	margin: 0px auto;
	flex-direction: row;
	flex-flow: space-between;
}
.headerText{
	max-width: 40%;
	padding-left: 12px;
}
.headerText h4{
	color: white;
}
.headerText h1{
	color: white;
	margin-top: 120px;
}
@media screen and (max-width: 760px) {
	.headerImage{
		height: 70vh;
		background-position: 65%;
		align-items: flex-end;
	}
	.headerText{
		max-width: 65%;
	}
}

@media screen and (max-width: 370px) {
	.headerText{
		max-width: 90%;
	}
}
/*================================*/
/* Sections styles
/*================================*/
section h2.title{
	text-align: center;
	margin-top: 32px;
}
section.topo{
	background-image: url('/_includes/assets/img/topopattern.png');
	background-size: 25%;
}
@media screen and (max-width: 900px) {
	section.topo{
		background-size: 60%;
	}
}
section.green{
	background: var(--green);
}
section.yellow{
	background: var(--yellow);
}
section .container.threeup{
	display: flex;
	flex-flow: space-between;
	align-items: stretch;
	flex-wrap: wrap;
	padding:64px 0px;
}

section .container.threeup.smallerTopPadding{
	padding-top: 24px;
}
section .container.threeup .point{
	width: 33.333333%;
	text-align: center;
	padding: 24px;
}

section .container.threeup img{
	background: white;
	box-shadow: 0px 4px 24px rgba(33, 51, 35, 0.2);
	width: 100%;
	height: auto;
	padding: 10%;
	border-radius: 8px;
}
@media screen and (max-width: 760px) {
	section .container.threeup{
		padding: 32px 0px;
	}
	section .container.threeup .point{
		width: 100%;
		padding: 12px;
	}
	section .container.threeup img{
		width: 65%;
	}
	section .container.threeup h3{
		margin-top: 12px;
	}
}

section .container.singlepoint{
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 64px 24px;
	text-align: center;
	color: white;
	max-width: 640px;
}

section .container.singlepoint img{
	width: 35%;
}

@media screen and (max-width: 760px) {
	section .container.singlepoint img{
		width: 50%;
	}
}

section .container.singlepoint h2{
	margin-top: 24px;
}

section .container.fourup{
	display: flex;
	flex-direction: row;
	padding:24px 0px 64px 0px;
	text-align: center;
	align-items: stretch;
	flex-wrap: wrap;
	position: relative;
}
section .container.fourup img{
	height: auto;
	width: 100%;
	min-height: 240px;
	object-fit: cover;
	background: var(--yellow);
	border-radius: 8px 8px 0px 0px;
}

section .container.fourup .point{
	box-sizing: content-box;
	width: 25%;
	width: calc((25%) - (48px));
	margin: 24px;
	padding-bottom: 48px;
	background: white;
	border-radius: 8px;
	box-shadow: 0px 4px 24px rgba(33, 51, 35, 0.2);
	transform: scale(1);
	transition: 0.2s ease-in-out;
}
section .container.fourup .point:hover{
	transform: scale(1.05) translateY(-12px);
	box-shadow: 0px 8px 16px rgba(33, 51, 35, 0.5);
}

section .container.container.fourup .point span{
	position: absolute;
    bottom: 24px;
    left: 0px;
    margin: 0 auto;
    right: 0px;
}


@media screen and (max-width: 900px) {
	section .container.fourup{
		padding: 24px 12px 64px 12px;
	}
	section .container.fourup .point{
		width: 50%;
		margin: 12px;
		width: calc((50%) - (24px));
	}
}
@media screen and (max-width: 760px) {
	section .container.fourup .point{
		width: 100%;
	}
}

section .container.fourup h5{
	padding: 0px 24px;
	margin: 24px 0px 16px 0px;
}

section .container.fourup p{
	padding: 0px 24px;
}

/*================================*/
/* Pages styles
/*================================*/
.pageHeaderImage{
	background: var(--greenHighlight);
	height: 80%;
	height: 70vh;
	background-size: cover;
	background-position: center;
	display: flex;
	align-items: flex-end;
	margin: 0px auto;
	flex-direction: column-reverse;
	flex-flow: space-between;
}
.pageHeaderText{
	width: 100%;
	max-width: 800px;
	margin: 0 auto;
	padding: 0px 24px;
}
@media screen and (max-width: 760px) {
	.pageHeaderText{
		padding: 0px;
	}
}

.pageHeaderText h1{
	color: white;
}
.pageBody{
	margin-top: 64px;
	margin-bottom: 64px;
	max-width: 800px;
}

.pageBody ul{
	margin-bottom: 64px;
}

img.inline{
	width: 50%;
	float: right;
	padding: 0px 0px 24px 24px;
}
@media screen and (max-width: 760px) {
	img.inline{
		width: 60%;
	}
}

/*================================*/
/* Footer
/*================================*/
footer{
	background-image: url('/_includes/assets/img/topopattern.png');
	background-size: 25%;
	padding: 48px 24px;
}
@media screen and (max-width: 900px) {
	footer{
		background-size: 60%;
	}
}
small{
	width: 100%;
	text-align: center;
	color: rgb(150,150,150);
	display: inline-block;
}
.socialMedia{
	display: flex;
	justify-content: center;
	margin: 32px 0px;
}

.socialMediaIcon{
	width: 80px;
	height: 80px;
	margin: 32px 32px;
	transform: scale(1);
	transition: 0.2s ease-in-out;
}
.socialMediaIcon:hover{
	transform: scale(1.05);
	filter: brightness(180%);
}

